--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
             <div class="d-flex justify-content-evenly mt-4 w-50 m-auto">
                 <a href="https://www.youtube.com/@it4230" target="_blank"
                     class="btn btn-danger rounded-pill btn-lg px-4"><i class="bi bi-youtube"></i></a>
-                <a href="#" class="btn btn-primary rounded-pill btn-lg px-4"><i class="bi bi-facebook"></i></a>
-                <a href="#" class="btn btn-warning rounded-pill btn-lg px-4"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/people/%EC%9D%B4%EC%A0%A0%EC%BB%B4%ED%93%A8%ED%84%B0%EC%95%84%EC%B9%B4%EB%8D%B0%EB%AF%B8/100064189087426/?locale=ko_KR" class="btn btn-primary rounded-pill btn-lg px-4"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/" class="btn btn-warning rounded-pill btn-lg px-4"><i class="bi bi-instagram"></i></a>
             </div>
         </div>   
     </section>
